z-index fixes, 1st grid content added

--- a/stylesheets/bento.css
+++ b/stylesheets/bento.css
@@ -1,16 +1,18 @@
+* {
+  --text-black: var(#292929);
+}
 .bento {
+  overflow-y: auto;
   position: relative;
   width: 85vw;
   z-index: -10;
-  height: 100vh;
+  height: 130vh;
   position: fixed;
   right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* padding: 24px 24px 24px; */
   background-color: rgb(210, 210, 210);
-  /* padding: 0px; */
 }
 
 .main {
@@ -20,17 +22,15 @@
   grid-template-rows: repeat(3, 1fr);
   gap: 16px;
   padding: 50px;
-  height: 100%;
-  width: 100%;
+  height: 90%;
+  width: 90%;
   /* background-color: rgb(225, 147, 147); */
 }
 
 .innerbox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: rgb(255, 255, 255);
   border-radius: 16px;
+  padding: 32px;
 }
 
 #position {
@@ -58,6 +58,7 @@
 #location {
   grid-column: 1/3;
   grid-row: 3/4;
+  padding: 0;
 }
 #location iframe {
   width: 100%;
@@ -66,4 +67,39 @@
 #project {
   grid-column: 3/5;
   grid-row: 2/4;
+}
+
+/* ************************************************************* */
+
+.heading-text {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex-direction: column;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+}
+
+.heading-text .title p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 32px;
+  font-weight: 700;
+  background: linear-gradient(100deg, #09203f, #537895);
+  -webkit-background-clip: text;
+  color: transparent;
+}
+.heading-text img {
+  height: 40px;
+}
+
+#greet-text {
+  color: var(--text-black);
+  font-size: 1.2rem;
+  font-weight: 400;
+  font-family: "Roboto", sans-serif;
 }
