--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -2,29 +2,58 @@
 font-family: "Roboto", sans-serif; */
 body {
   /* overflow-y: hidden; */
+  height: 100vh;
+  animation-name: bodyscroll;
+  animation-duration: var(--duration);
+  animation-delay: var(--delay);
+  animation-fill-mode: forwards;
+  transition: ease-in-out;
 }
+@keyframes bodyscroll {
+  0% {
+    height: 100vh;
+  }
+  100% {
+    height: 130vh;
+  }
+}
+
 * {
-  /* overflow: hidden; */
   margin: 0;
   padding: 0;
   --duration: 1s;
   --delay: 3s;
 }
+
 #container {
+  /* overflow-y: hidden; */
   position: relative;
   height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: -10;
-  /* background-image: url("assests/IMG_20220302_194404_631.jpg"); */
+  z-index: 10;
+  animation-name: scroll;
+  animation-duration: var(--duration);
+  animation-delay: 4s;
+  animation-fill-mode: forwards;
+  transition: ease-in-out;
+}
+@keyframes scoll {
+  0% {
+    overflow-y: hidden;
+  }
+  100% {
+    overflow-y: auto;
+  }
 }
 
 #inner_container {
-  overflow: hidden;
+  overflow-y: hidden;
   background-color: rgb(255, 255, 255);
   position: absolute;
+  top: 0;
   left: 0;
   height: 100vh;
   width: 100%;
@@ -33,7 +62,6 @@ body {
   align-items: center;
   flex-direction: column;
   gap: 50px;
-  /* padding: 32px; */
   z-index: 10;
   animation-name: sidenav;
   animation-duration: var(--duration);
@@ -44,14 +72,13 @@ body {
 
 @keyframes sidenav {
   0% {
-    /* position: absolute; */
+    position: absolute;
     z-index: 10;
-
     width: 100vw;
     gap: 50px;
   }
   100% {
-    /* position: relative; */
+    position: fixed;
     width: 15vw;
     left: 0;
     z-index: -10;
@@ -61,7 +88,6 @@ body {
 }
 .detail {
   position: relative;
-  /* top: 100px; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -180,6 +206,10 @@ body {
   transition: ease-in-out;
 }
 
+.navigation div:hover {
+  background-color: red;
+}
+
 @keyframes navigation {
   0% {
     visibility: hidden;
@@ -187,4 +217,9 @@ body {
   100% {
     visibility: visible;
   }
+}
+
+.navigation div a {
+  color: rebeccapurple;
+  text-decoration: none;
 }
